# garamon

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  firstTxtFile.txt
conf/: c10ga.conf  c11ga.conf  c12ga.conf  c13ga.conf  c14ga.conf  c15ga.conf  c16ga.conf  c17ga.conf  c20ga.conf  c2ga.conf  c3ga.conf  c3ga2.conf  c3ga3.conf  c4ga.conf  c5ga.conf  c6ga.conf  c7ga.conf  c8ga.conf  c9ga.conf  cc2ga.conf  dc3ga.conf  dsta.conf  e16ga.conf  e18ga.conf  e20ga.conf  e25ga.conf  e2ga.conf  e3ga.conf  e4ga.conf  e5.conf  e7ga.conf  op3ga.conf  p2ga.conf  p3ga.conf  p3ga2.conf  qc2ga.conf  qc3ga.conf  st3ga.conf  st3ga2.conf  v3ga.conf
data/: BasisTransformations.hpp  CMakeLists.txt  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricEuclidean.hpp  GeometricExplicit.hpp  Inner.hpp  InnerEuclidean.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  README.md  Utility.hpp  cheatSheet.txt  setup.py
data/doc/: CMakeLists.txt  Doxyfile-html.cmake
data/doc/HOWTO/: HOWTO-build  HOWTO-doc  HOWTO-test
data/sample/: CMakeLists.txt  sample.py
data/sample/modules/: Find_myLib.cmake
data/sample/src/: main.cpp
plugin/: c3ga2Tools.hpp  c3gaTools.hpp  c3gaUnitTests.cpp  cc2gaTools.hpp  dstaTools.hpp  p2gaTools.hpp  p3ga2Tools.hpp  p3gaTools.hpp  qc3gaC3ga2P3ga2MappingTools.hpp  qc3gaTools.hpp  st3ga2Tools.hpp  st3gaTools.hpp
src/: ConfigParser.cpp  ConfigParser.hpp  Directory.cpp  Directory.hpp  MetaData.cpp  MetaData.hpp  MetricTools.cpp  MetricTools.hpp  ProductToString.cpp  ProductToString.hpp  ProductTools.cpp  ProductTools.hpp  Utilities.cpp  Utilities.hpp  main.cpp
